--- a/programan-community-web/src/main/resources/application.yml
+++ b/programan-community-web/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
-  port: 8080
+  port: 9999
 spring:
   profiles:
-    active: wqf
+    active: ali
   application:
         name: Programan Community Application
