--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
     <modules>
         <module>programan-community-web</module>
         <module>programan-parent</module>
+        <module>programan-community-db</module>
+        <module>programan-common</module>
+        <module>programan-repository</module>
     </modules>
 
     <build>
@@ -20,7 +23,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.programan.cm.web.StartMainApplication</mainClass>
+                    <mainClass>com.programan.StartMainApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
