--- a/programan-community-web/pom.xml
+++ b/programan-community-web/pom.xml
@@ -57,6 +57,28 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.programan</groupId>
+            <artifactId>programan-community-repository</artifactId>
+            <version>1.0.0.SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.programan</groupId>
+            <artifactId>programan-community-db</artifactId>
+            <version>1.0.0.SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.programan</groupId>
+            <artifactId>programan-community-common</artifactId>
+            <version>1.0.0.SNAPSHOT</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -65,7 +87,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.programan.cm.web.StartMainApplication</mainClass>
+                    <mainClass>com.programan.StartMainApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
