--- a/programan-parent/pom.xml
+++ b/programan-parent/pom.xml
@@ -29,6 +29,293 @@
         </dependencies>
     </dependencyManagement>
 
+    <properties>
+        <!-- benew lib version -->
+        <benew.version>1.0</benew.version>
+        <c3p0.version>0.9.1.2</c3p0.version>
+        <commons-lang3.version>3.1</commons-lang3.version>
+        <commons-io.version>2.1</commons-io.version>
+        <commons-beanutils.version>1.8.3</commons-beanutils.version>
+        <commons-fileupload.version>1.3</commons-fileupload.version>
+        <commons-httpclient.version>3.1_2</commons-httpclient.version>
+        <joda-time.version>2.2</joda-time.version>
+        <jdom.version>1.1.3</jdom.version>
+        <poi.version>3.9</poi.version>
+        <jsoup.version>1.7.2</jsoup.version>
+        <mysql.version>5.1.46</mysql.version>
+        <jedis.version>2.9.0</jedis.version>
+        <kotlin-reflect.version>1.2.71</kotlin-reflect.version>
+        <json-lib.version>2.3</json-lib.version>
+        <json.path.version>2.2.0</json.path.version>
+        <guava.version>23.0</guava.version>
+        <rest.assured.version>2.3.1</rest.assured.version>
+        <joda.time.version>2.3</joda.time.version>
+        <checkstyle.version>6.11.1</checkstyle.version>
+        <commons.lang.version>2.2</commons.lang.version>
+        <commons.math3.version>3.6.1</commons.math3.version>
+        <jackson.datatype.joda.version>2.7.4</jackson.datatype.joda.version>
+        <nd4j.backend>nd4j-native-platform</nd4j.backend>
+        <nd4j.version>0.9.1</nd4j.version>
+        <dl4j.version>0.9.1</dl4j.version>
+        <datavec.version>0.9.1</datavec.version>
+        <checkstyle.path>../checkstyle/benew-checkstyle.xml</checkstyle.path>
+
+        <druid.version>1.1.10</druid.version>
+
+        <!-- api doc -->
+        <swagger.version>2.6.1</swagger.version>
+
+        <!-- java compile tool -->
+        <janino.version>2.7.8</janino.version>
+
+        <!-- json version tool -->
+        <fastjson.version>1.2.51</fastjson.version>
+
+        <!-- 数据转换对象 -->
+        <dozer.version>5.5.1</dozer.version>
+
+        <lombok.version>1.16.10</lombok.version>
+
+        <!-- Plugin -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jdk.version>1.8</jdk.version>
+        <maven.test.skip>true</maven.test.skip>
+
+        <!-- Java test tool -->
+        <h2.database.version>1.4.193</h2.database.version>
+        <mockito.core.version>1.10.19</mockito.core.version>
+        <powermock.module.junit4.version>1.6.3</powermock.module.junit4.version>
+        <powermock.api.mockito.version>1.6.3</powermock.api.mockito.version>
+        <mvel2.version>2.4.2.Final</mvel2.version>
+
+        <!-- sonar地址 -->
+        <sonar.host.url>http://jenkins.puhuitech.cn:9000</sonar.host.url>
+        <sonar.language>java</sonar.language>
+        <sonar.exclusions>
+            *com/benew/model/*
+        </sonar.exclusions>
+        <!-- sonar地址 -->
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
+            <version>${kotlin-reflect.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.darrachequesne</groupId>
+            <artifactId>spring-data-jpa-datatables</artifactId>
+            <version>5.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid-spring-boot-starter</artifactId>
+            <version>1.1.10</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.haifengl</groupId>
+            <artifactId>smile-core</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.haifengl</groupId>
+            <artifactId>smile-netlib</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.oath.halodb</groupId>
+            <artifactId>halodb</artifactId>
+            <version>0.4.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mapdb</groupId>
+            <artifactId>mapdb</artifactId>
+            <version>3.0.7</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+
+        <!-- java date tool -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${joda.time.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.puppycrawl.tools</groupId>
+            <artifactId>checkstyle</artifactId>
+            <version>${checkstyle.version}</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-lang3</artifactId>
+                    <groupId>org.apache.commons</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>commons-beanutils</artifactId>
+                    <groupId>commons-beanutils</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>guava</artifactId>
+                    <groupId>com.google.guava</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>${commons.math3.version}</version>
+        </dependency>
+
+        <!-- csv tool -->
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>4.0</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>commons-lang3</artifactId>
+                    <groupId>org.apache.commons</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <!-- String tool -->
+        <dependency>
+            <groupId>com.shekhargulati</groupId>
+            <artifactId>strman</artifactId>
+            <version>0.4.0</version>
+        </dependency>
+        <!-- nd4j Matrix tool -->
+        <!--
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-native-platform</artifactId>
+            <version>${nd4j.version}</version>
+        </dependency>
+        -->
+        <dependency>
+            <groupId>org.mvel</groupId>
+            <artifactId>mvel2</artifactId>
+            <version>${mvel2.version}</version>
+        </dependency>
+        <!--
+        <dependency>
+            <groupId>org.datavec</groupId>
+            <artifactId>datavec-api</artifactId>
+            <version>${datavec.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.deeplearning4j</groupId>
+            <artifactId>deeplearning4j-regression</artifactId>
+            <version>${dl4j.version}</version>
+        </dependency>
+        -->
+        <!--<dependency>-->
+        <!--<groupId>org.jblas</groupId>-->
+        <!--<artifactId>jblas</artifactId>-->
+        <!--<version>1.2.3</version>-->
+        <!--</dependency>-->
+
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.10</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>1.1.50</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+    </dependencies>
+
     <!-- 设置默认远程仓库下载地址 -->
     <repositories>
         <repository>
