--- a/programan-parent/pom.xml
+++ b/programan-parent/pom.xml
@@ -336,8 +336,10 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
-                <filtering>true</filtering>
+                <!--<filtering>true</filtering>-->
+                <filtering>false</filtering>
             </resource>
+
         </resources>
         <testResources>
             <testResource>
