--- a/programan-community-web/pom.xml
+++ b/programan-community-web/pom.xml
@@ -12,6 +12,12 @@
 
     <artifactId>programan-community-web</artifactId>
 
+    <!--<properties>-->
+        <!--<thymeleaf.version>3.0.9.RELEASE</thymeleaf.version>-->
+        <!--<thymeleaf-layout-dialect.version>2.3.0</thymeleaf-layout-dialect.version>-->
+    <!--</properties>-->
+
+
     <dependencies>
 
         <dependency>
@@ -55,11 +61,25 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>2.1.1.RELEASE</version>
         </dependency>
 
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+            <version>3.0.2.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>nz.net.ultraq.thymeleaf</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+            <version>2.3.0</version>
         </dependency>
 
         <dependency>
