--- a/programan-parent/pom.xml
+++ b/programan-parent/pom.xml
@@ -315,6 +315,13 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>2.1.1.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.sourceforge.nekohtml</groupId>
+            <artifactId>nekohtml</artifactId>
+            <version>1.9.22</version>
+        </dependency>
+
     </dependencies>
 
     <!-- 设置默认远程仓库下载地址 -->
