--- a/programan-parent/pom.xml
+++ b/programan-parent/pom.xml
@@ -274,6 +274,13 @@
             <artifactId>mvel2</artifactId>
             <version>${mvel2.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
+
         <!--
         <dependency>
             <groupId>org.datavec</groupId>
